Fix pseudo element overlap issue.

--- a/src/_assets/css/_books.scss
+++ b/src/_assets/css/_books.scss
@@ -14,3 +14,7 @@
     }
   }
 }
+
+.help-instruction {
+  z-index: 1;
+}
